# bethesda-shelter-agent

./: .env.example  .gitignore  .railwayignore  AGENT_CAPABILITIES.md  DEPLOYMENT.md  DEPLOYMENT_STATUS.md  DOUBLE_COMMIT_FIXES.md  FINAL_DEPLOYMENT_STEPS.md  LATENCY_OPTIMIZATION.md  MULTILINGUAL_SUPPORT.md  NOISE_SUPPRESSION.md  Procfile  QUICKSTART.md  README.md  SPANISH_FIXES.md  add_language_column.py  agent.yaml  deploy.sh  dev.sh  pyproject.toml  requirements.txt  seed_beds.py  seed_users.py  test_call.py
.github/: copilot-instructions.md
data/policies/: README.md  sample_policies.yaml
scripts/: load_policies.py
src/: __init__.py  config.py  livekit_agent.py  main.py
src/Frontend/: .env.example  README.md  index.html  package-lock.json  package.json  server.js  tsconfig.app.json  vite.config.ts
src/Frontend/src/: App.css  App.tsx  config.ts  index.css
src/Frontend/src/components/: ActiveReservations.tsx  BedMap.tsx  Chat.tsx  (+8 more)
src/Frontend/utils/: mockApi.ts  mockDonations.ts
src/api/routes/: __init__.py  auth.py  beds.py  chapel.py  chat.py  guests.py  health.py  livekit.py  reservations.py  seeds_beds.py  tasks.py  voice.py  volunteers.py
src/db/: database.py
src/jobs/: __init__.py  celery_app.py  scheduler.py  tasks.py
src/models/: auth_models.py  auth_schemas.py  db_models.py  schemas.py
src/services/: auth_service.py  bed_service.py  chat_service.py  intent_classifier.py  rag_service.py  reservation_service.py  task_service.py  voice_agent.py
tests/: conftest.py  test_bed_service.py  test_intent_classifier.py  test_reservation_service.py
(+2 files in other folders)
